fixed address-lines spacing

--- a/Draft/css/checkout.css
+++ b/Draft/css/checkout.css
@@ -350,3 +350,9 @@ label {
 .card-buttons button:hover {
     background-color: #333;
 }
+
+.address-line {
+  margin: 4px 0;
+  line-height: 1;
+  font-size: 15px;
+}
